cluster-objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubestellar-docs
  namespace: docs
  labels:
    app: kubestellar-docs
    pr: prod
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kubestellar-docs
      pr: prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1 
  template:
    metadata:
      labels:
        app: kubestellar-docs
        pr: prod
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: kubestellar-docs
          image: iad.ocir.io/id4wyucbsggm/kubestellar-docs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kubestellar-docs
  namespace: docs
  labels:
    app: kubestellar-docs
    pr: prod
spec:
  type: ClusterIP
  selector:
    app: kubestellar-docs
    pr: prod
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubestellar-docs
  namespace: docs
  labels:
    app: kubestellar-docs
    pr: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prod.previews.kubestellar.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubestellar-docs
                port:
                  number: 80
